unpackaged/main/default/objects/Systems__c/Systems__c.object-meta.xml
<CustomObject>
    <label>Systems</label>
    <nameField>
        <label>System Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>