unpackaged/main/default/objects/Systems__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <label>Brand Name</label>
    <length>24</length>
    <type>Text</type>
</CustomField>