unpackaged/main/default/objects/Systems__c/fields/Contact_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Contact_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Assigned</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Systems</relationshipLabel>
    <relationshipName>Systems</relationshipName>
    <type>Lookup</type>
</CustomField>