unpackaged/main/default/objects/Systems__c/fields/Hard_Disk_Size__c.field-meta.xml
<CustomField>
    <fullName>Hard_Disk_Size__c</fullName>
    <label>Hard Disk Size</label>
    <length>12</length>
    <type>Text</type>
</CustomField>