unpackaged/main/default/objects/Systems__c/fields/Memory_Size__c.field-meta.xml
<CustomField>
    <fullName>Memory_Size__c</fullName>
    <label>Memory Size</label>
    <length>24</length>
    <type>Text</type>
</CustomField>