unpackaged/main/default/objects/Systems__c/fields/Monitor_Size__c.field-meta.xml
<CustomField>
    <fullName>Monitor_Size__c</fullName>
    <label>Monitor Size</label>
    <length>8</length>
    <type>Text</type>
</CustomField>