unpackaged/main/default/objects/Systems__c/fields/Operating_System__c.field-meta.xml
<CustomField>
    <fullName>Operating_System__c</fullName>
    <label>Operating System</label>
    <length>24</length>
    <type>Text</type>
</CustomField>