unpackaged/main/default/objects/Systems__c/fields/Primary_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_IP_Address__c</fullName>
    <label>Primary IP4 Address</label>
    <length>30</length>
    <type>Text</type>
</CustomField>