unpackaged/main/default/objects/Systems__c/fields/Processor__c.field-meta.xml
<CustomField>
    <fullName>Processor__c</fullName>
    <label>Processor</label>
    <length>24</length>
    <type>Text</type>
</CustomField>