unpackaged/main/default/objects/Systems__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>AcctSeedERP__Purchase_Order__c</referenceTo>
    <relationshipLabel>Systems</relationshipLabel>
    <relationshipName>Systems</relationshipName>
    <type>Lookup</type>
</CustomField>