unpackaged/main/default/objects/Systems__c/fields/Secondary_IPv4_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Secondary_IPv4_IP_Address__c</fullName>
    <label>Secondary IP4 IP Address</label>
    <length>40</length>
    <type>Text</type>
</CustomField>