unpackaged/main/default/objects/Systems__c/fields/System_Link__c.field-meta.xml
<CustomField>
    <fullName>System_Link__c</fullName>
    <formula>HYPERLINK("/" &amp; Id,  SystemID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Link</label>
    <type>Text</type>
</CustomField>