unpackaged/main/default/objects/Systems__c/fields/System_Notes__c.field-meta.xml
<CustomField>
    <fullName>System_Notes__c</fullName>
    <label>System Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>