unpackaged/main/default/objects/Systems__c/fields/System_Type__c.field-meta.xml
<CustomField>
    <fullName>System_Type__c</fullName>
    <label>System Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PC Hardware</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Gateway</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Printer</fullName>
            </value>
            <value>
                <fullName>Server</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>