unpackaged/main/default/objects/Systems__c/fields/SystemID__c.field-meta.xml
<CustomField>
    <fullName>SystemID__c</fullName>
    <displayFormat>SID-{0000}</displayFormat>
    <label>SystemID</label>
    <type>AutoNumber</type>
</CustomField>