unpackaged/main/default/objects/Systems__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>System_Link__c</columns>
    <columns>System_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Brand_Name__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Account_Alias__c</columns>
    <columns>Contact_Assigned__c</columns>
    <columns>Purchase_Order__c</columns>
    <columns>Part_Number__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Primary_IP_Address__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>