unpackaged/main/default/objects/Systems__c/listViews/Assigned.listView-meta.xml
<ListView>
    <fullName>Assigned</fullName>
    <columns>System_Link__c</columns>
    <columns>System_Type__c</columns>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Brand_Name__c</columns>
    <columns>Model_Number__c</columns>
    <columns>Account__c</columns>
    <columns>Account_Alias__c</columns>
    <columns>Contact_Assigned__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Serial_Number__c</columns>
    <columns>Purchase_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Assigned</value>
    </filters>
    <label>Assigned</label>
    <language>en_US</language>
</ListView>