unpackaged/main/default/objects/Systems__c/listViews/Ordered.listView-meta.xml
<ListView>
    <fullName>Ordered</fullName>
    <columns>System_Link__c</columns>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Account_Alias__c</columns>
    <columns>Contact_Assigned__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ordered</value>
    </filters>
    <label>Ordered</label>
    <language>en_US</language>
</ListView>