unpackaged/main/default/objects/Systems__c/listViews/Printers.listView-meta.xml
<ListView>
    <fullName>Printers</fullName>
    <columns>System_Link__c</columns>
    <columns>Status__c</columns>
    <columns>Brand_Name__c</columns>
    <columns>Model_Number__c</columns>
    <columns>NAME</columns>
    <columns>Primary_IP_Address__c</columns>
    <columns>Account__c</columns>
    <columns>Account_Alias__c</columns>
    <columns>Contact_Assigned__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>System_Type__c</field>
        <operation>equals</operation>
        <value>Printer</value>
    </filters>
    <label>Printers</label>
    <language>en_US</language>
</ListView>