unpackaged/main/default/objects/Systems__c/listViews/Unassigned.listView-meta.xml
<ListView>
    <fullName>Unassigned</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Unassigned-In Inventory</value>
    </filters>
    <label>Unassigned</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>